--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <!-- Include Sinon as the library for spies, stubs, and mocks. -->
     <script src="node_modules/sinon/pkg/sinon.js"></script>
 
+    <!-- Hack it -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.js"></script>
+
     <!-- Include the student's JavaScript file. -->
     <script src="konami_code.js"></script>
 
